--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,8 +19,13 @@ jobs:
       - name: Set up Java 8
         uses: actions/setup-java@v3
         with:
+          distribution: temurin
           java-version: '8'
-          distribution: 'temurin'
+
+      - name: Install Gradle 7.6
+        uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: '7.6'
 
       - name: Cache Gradle
         uses: actions/cache@v3
@@ -32,11 +37,8 @@ jobs:
           restore-keys: |
             gradle-${{ runner.os }}-
 
-      - name: Make Gradle wrapper executable
-        run: chmod +x gradlew
-
       - name: Build with Gradle
-        run: ./gradlew clean build --no-daemon
+        run: gradle clean build --no-daemon
 
       - name: Upload JAR
         uses: actions/upload-artifact@v4
