--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,10 @@ targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    maven { url = 'https://oss.sonatype.org/content/repositories/snapshots/' }
     maven { url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
 }
+
 
 
 dependencies {
