--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
-    maven { url = 'https://oss.sonatype.org/content/repositories/snapshots/' }
+    maven { url = 'https://repo.md-5.net/content/groups/public/' }
     maven { url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
 }
 
